# python-markdown-secrets

./: .gitignore  LICENSE  README.md  mkdsecrets.py  pyproject.toml  setup.py  shell.nix
test/: test_secrets.py
