[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdsecrets"
version = "0.0.2"
authors = [
	{ name="Maverick Peppers" },
]
description = "Replaces <secret>...</secret> html with an empty span."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/TheMaverickProgrammer/python-markdown-secrets"
Issues = "https://github.com/TheMaverickProgrammer/python-markdown-secrets"
